Создан класс для загрузки данных
Перенес всю инфу для загрузки из гугл таблиц в отдельный класс и сделал загрузку Weapon

--- a/RolePlay Maker/RolePlay Maker.csproj
+++ b/RolePlay Maker/RolePlay Maker.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Forms\QuestGenerator.Designer.cs">
       <DependentUpon>QuestGenerator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Loader.cs" />
     <Compile Include="Mobs.cs" />
     <Compile Include="Forms\Network.cs">
       <SubType>Form</SubType>
