--- a/RolePlay Maker/RolePlay Maker.csproj
+++ b/RolePlay Maker/RolePlay Maker.csproj
@@ -170,6 +170,12 @@
       <DependentUpon>QuestGenerator.cs</DependentUpon>
     </Compile>
     <Compile Include="Items\Loader.cs" />
+    <Compile Include="Logs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Logs.Designer.cs">
+      <DependentUpon>Logs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Mobs.cs" />
     <Compile Include="Forms\Network.cs">
       <SubType>Form</SubType>
@@ -255,6 +261,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\QuestGenerator.resx">
       <DependentUpon>QuestGenerator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Logs.resx">
+      <DependentUpon>Logs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
