--- a/RolePlay Maker/RolePlay Maker.csproj
+++ b/RolePlay Maker/RolePlay Maker.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ability.cs" />
+    <Compile Include="Entity.cs" />
     <Compile Include="Forms\AbilityInfo.cs">
       <SubType>Form</SubType>
     </Compile>
