--- a/RolePlay Maker/RolePlay Maker.csproj
+++ b/RolePlay Maker/RolePlay Maker.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -170,6 +171,7 @@
       <DependentUpon>QuestGenerator.cs</DependentUpon>
     </Compile>
     <Compile Include="Items\Loader.cs" />
+    <Compile Include="Items\Store.cs" />
     <Compile Include="Logs.cs">
       <SubType>Form</SubType>
     </Compile>
