--- a/RolePlay Maker/packages.config
+++ b/RolePlay Maker/packages.config
@@ -6,4 +6,5 @@
   <package id="Google.Apis.Sheets.v4" version="1.34.0.1240" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net45" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net45" />
 </packages>
